<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context="com.example.ussien.sega.Activities.LoginActivity">

    <RelativeLayout
        android:background="#FFFFFF"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <ImageView android:src="@drawable/logo2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <!--  Email Label -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:textColor="#37474F"
                    android:layout_gravity="center"
                    android:hint="@string/email_hint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:errorEnabled="true">

                <!-- Password Label -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:textColor="#37474F"
                    android:hint="@string/password_hint"/>
            </android.support.design.widget.TextInputLayout>
            <!-- Login Button -->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#37474F"
                android:text="@string/signIn_button"
                android:textColor="#FFFFFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textColor="#37474F"
                android:layout_gravity="center"
                android:text="@string/signup_link_prev"
                android:gravity="center"
                android:textSize="16sp"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:textColor="#37474F"
                android:layout_gravity="center"
                android:text="@string/signup_link"
                android:gravity="center"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
