<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#FFFFFF"
    tools:context="com.example.ussien.sega.Activities.SignUpActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:layout_gravity="center">

            <ImageView android:src="@drawable/logo2"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/uname_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <!--  Email Label -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_username"
                    android:textColor="#37474F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:hint="@string/profile_username" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/mail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <!--  Email Label -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_email"
                    android:textColor="#37474F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:hint="@string/email_hint" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <!-- Password Label -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:textColor="#37474F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:hint="@string/password_hint"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pass_confirm_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <!-- Password Re-enter Label -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_reEnterPassword"
                    android:textColor="#37474F"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp"
                    android:hint="@string/repassword_hint"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="#37474F"
                android:padding="12dp"
                android:onClick="signup"
                android:textColor="#FFFFFF"
                android:text="@string/signUp_button"/>

        </LinearLayout>

    </ScrollView>
