<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="#FFFFFF"
    tools:context="com.example.ussien.sega.Activities.ProfileActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/tool_bar"
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/profile_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />

                <ImageView
                    android:id="@+id/submit"
                    android:src="@drawable/ic_photo_camera_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!--  fname Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/fname_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fname_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#37474F"
                        android:layout_gravity="center"
                        android:hint="@string/profile_fname" />
                </android.support.design.widget.TextInputLayout>

                <!--  lname Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lname_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lname_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#37474F"
                        android:layout_gravity="center"
                        android:hint="@string/profile_lname" />
                </android.support.design.widget.TextInputLayout>

                <!--  username Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/uname_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#37474F"
                        android:layout_gravity="center"
                        android:hint="@string/profile_username" />
                </android.support.design.widget.TextInputLayout>

                <!--  username Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#37474F"
                        android:layout_gravity="center"
                        android:hint="@string/profile_email" />
                </android.support.design.widget.TextInputLayout>

                <!--  phone Label -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone_input"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="#37474F"
                        android:layout_gravity="center"
                        android:hint="@string/profile_phone" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/save_button"
                    android:layout_marginTop="20dp"
                    android:background="#37474F"
                    android:textColor="#FFFFFF"
                    android:text="@string/profile_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

</ScrollView>